// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`if there are no conversion hosts available renders an error view 1`] = `
<InProgressCard
  footer={
    <CardFooter
      buttonText="Cancel Migration"
      disabled={false}
      onButtonClick={[Function]}
    />
  }
  onClick={[Function]}
  title={
    <h3
      className="card-pf-title"
    >
      Migration Plan F-0
    </h3>
  }
>
  <CardEmptyState
    emptyStateInfo="Waiting for an available conversion host. You can continue waiting or go to the Migration Settings page to increase the number of migrations per host"
    emptyStateInfoStyles={
      Object {
        "marginTop": 10,
      }
    }
    showSpinner={true}
  />
</InProgressCard>
`;

exports[`when the request is denied renders an error view 1`] = `
<InProgressCard
  footer={
    <CardFooter
      buttonText="Cancel Migration"
      disabled={undefined}
      onButtonClick={[Function]}
    />
  }
  onClick={[Function]}
  title={
    <h3
      className="card-pf-title"
    >
      Migration Plan H-0
    </h3>
  }
>
  <CardEmptyState
    emptyStateInfo={
      <UNDEFINED>
        Unable to migrate VMs because no conversion host was configured at the time of the attempted migration.
         
        See the product documentation for information on configuring conversion hosts.
      </UNDEFINED>
    }
    emptyStateInfoStyles={
      Object {
        "marginTop": 10,
      }
    }
    iconName="error-circle-o"
    iconType="pf"
  />
</InProgressCard>
`;
